--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta name="viewport" content="width=device-width" , initial-scale="1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -15,7 +16,6 @@
 </head>
 
 <body>
-
   <div class="profile-container">
     <div class="wrapped">
       <img src="Citi Profile 2.jpg" alt="This is Alexis Herrera" />
@@ -38,8 +38,10 @@
   <div class="aboutme-container">
     <div>
       <h2>About Me</h2>
-      <p>Innovative, task driven professional with experience in web design and development accross diverse industries.
-        Equipped with a record of success in consistently identifying and providing solutions. After this course I look
+      <p>Innovative, task driven professional with experience in web design and development accross diverse
+        industries.
+        Equipped with a record of success in consistently identifying and providing solutions. After this course I
+        look
         forward to being proficient in developing databases, creating user interfaces, writing and testing codes,
         troubleshooting simple/complex issues, and implementing new features based on custom feedback.</p>
       <h2>Completed Projects</h2>
